# bluetooth-gateway

./: .gitignore  .yamllint  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  west-ncs.yml  west-thingy91x-controller.yml  west-zephyr.yml  west.yml
.github/workflows/: bsim-push-or-pull.yml  bsim.yml  build.yml  coverity.yml  release.yml
boards/bsim_2G4_phy/: board.cmake  board.yml
boards/bsim_device/: board.cmake  board.yml
boards/native/nrf_bsim/: board.cmake
bsim_bin/: CMakeLists.txt
controller/: CMakeLists.txt  prj.conf  sample.yaml
controller/boards/: nrf52840dongle_nrf52840.conf  nrf9160dk_nrf52840.conf  nrf9160dk_nrf52840.overlay  thingy91x_nrf5340_cpunet.conf  thingy91x_nrf5340_cpunet.overlay
controller/sysbuild/: nrf5340_cpuapp.conf
doc/: simulator_or_usb_dongle.md
gateway/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  prj.conf  sample.yaml  sysbuild.cmake
gateway/boards/: aludel_elixir_ns.conf  aludel_elixir_ns.overlay  frdm_rw612_wifi.conf  mg100.conf  thingy91x_nrf9151_ns.overlay
gateway/include/gateway/bt/: scan.h
gateway/modules/ina260/: CMakeLists.txt  ina260.c
gateway/modules/ina260/zephyr/: module.yml
gateway/pytest/: conftest.py  test_sample.py
gateway/socs/: nrf9160_ns.conf
gateway/src/: app_sensors.c  app_sensors.h  block.c  block.h  bt.c  bt.h  cert.c  cert.h  downlink.c  downlink.h  fifo.c  fifo.h  main.c  uplink.c  uplink.h
gateway/src/bt/: cert.c  cert.h  connect.c  connect.h  downlink.c  downlink.h  scan.c  types.h  uplink.c  uplink.h
include/pouch_gateway/: cert.h  downlink.h  info.h  types.h  uplink.h
include/pouch_gateway/bt/: cert.h  connect.h  downlink.h  scan.h  uplink.h
lib/: CMakeLists.txt  cert.c  downlink.c  info.c  server-dev.pem  uplink.c
lib/bt/: cert.c  connect.c  downlink.c  info.c  scan.c  uplink.c
samples/central/: CMakeLists.txt  Kconfig.sysbuild  sample.yaml  sysbuild.cmake
samples/central/pytest/: conftest.py  test_sample.py
samples/custom_connect/: Kconfig  prj.conf  sample.yaml  sysbuild.cmake
samples/custom_connect/src/: main.c  scan.c
samples/lightdb/get/: CMakeLists.txt  Kconfig.sysbuild  sample.yaml  sysbuild.cmake
scripts/: west-commands.yml
scripts/runners/: __init__.py  bsim_base.py  bsim_phy.py  bsim_zephyr.py
zephyr/: module.yml  patches.yml
zephyr/patches/golioth/: 0001-Pouch-blockwise-uploads.patch  0001-gateway-add-gateway-downlink.patch  0001-gateway-receive-downlink-as-response-to-uplink.patch  0001-pouch-temp.patch  0002-gateway-add-server-certificate-get.patch  0003-gateway-support-device-cert-upload.patch
zephyr/patches/pouch/: 0001-dev-examples-ble_gatt-use-2kB-string-for-uplink-test.patch  0002-dev-examples-ble_gatt-use-2000-l2cap-TX-MTU.patch  (+2 more)
(+16 files in other folders)
